Make chat of teams app

--- a/src/main/res/layout/fragment_activity.xml
+++ b/src/main/res/layout/fragment_activity.xml
@@ -5,10 +5,32 @@
     android:layout_height="match_parent"
     tools:context=".ActivityFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Activity" />
+        android:layout_height="598dp">
+        <EditText
+            android:layout_margin="7dp"
+            android:id="@+id/etFilterActivity"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_view_bg"
+            android:hint="Search"
+            android:padding="10dp"
+            android:drawableStart="@drawable/ic_baseline_search_24"
+            android:drawablePadding="10dp"
+            android:drawableEnd="@drawable/ic_baseline_mic_24"
+            android:imeOptions="actionDone"
+            />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_alignTop="@id/etFilterActivity"
+            android:layout_marginTop="55dp"
+            android:src="@drawable/photo_activity_astatus" />
+
+    </RelativeLayout>
 
 </FrameLayout>
