--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,13 +6,75 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/barra_status_teams"
+        >
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_photo"
+            android:layout_width="43dp"
+            android:layout_height="43dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:shapeAppearanceOverlay="@style/circular"
+            android:src="@drawable/photo2"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tv_narbar_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="2dp"
+                android:text="Text"
+                android:textAlignment="center"
+                android:textSize="23dp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/iv_contact"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="176dp"
+                android:layout_marginBottom="2dp"
+                android:layout_toEndOf="@+id/tv_narbar_status"
+                android:src="@drawable/ic_baseline_account_box_24"
+                app:layout_constraintStart_toEndOf="@+id/tv_narbar_status" />
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="3dp"
+                android:layout_toEndOf="@+id/iv_contact"
+                android:src="@drawable/ic_baseline_view_headline_24" />
+
+        </RelativeLayout>
+
+
+    </androidx.appcompat.widget.Toolbar>
+
     <FrameLayout
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_alignTop="@+id/barra_status_teams"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="0dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
