--- a/src/main/res/layout/fragment_chat.xml
+++ b/src/main/res/layout/fragment_chat.xml
@@ -6,16 +6,26 @@
     android:orientation="vertical"
     tools:context=".ChatFragment">
     <EditText
+        android:layout_margin="7dp"
         android:id="@+id/etFilter"
         android:singleLine="true"
         android:maxLines="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:background="@drawable/search_view_bg"
+        android:hint="Search"
+        android:padding="10dp"
+        android:drawableStart="@drawable/ic_baseline_search_24"
+        android:drawablePadding="10dp"
+        android:drawableEnd="@drawable/ic_baseline_mic_24"
+        android:imeOptions="actionDone"
          />
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginVertical="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:id="@+id/recyclerViewChat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
