--- a/src/main/res/layout/item_chat_option.xml
+++ b/src/main/res/layout/item_chat_option.xml
@@ -9,12 +9,20 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_photo"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:shapeAppearanceOverlay="@style/circular"
         android:src="@drawable/photo2"
+        />
+    <ImageView
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_photo"
+        app:layout_constraintEnd_toEndOf="@+id/iv_photo"
+        android:id="@+id/status_photo"
+        android:src="@drawable/acuerdo"
         />
     <TextView
         android:id="@+id/tv_name"
@@ -25,6 +33,8 @@
         tool:text="JUAN PABLO STALIN"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_photo"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         />
     <TextView
         android:id="@+id/tv_fecha"
@@ -36,16 +46,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         />
+
     <TextView
         android:id="@+id/tv_last_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tool:text="What's up"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_photo"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_name"
+        app:layout_constraintVertical_bias="0.0"
+        tool:text="What's up" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
